Style with TailwindCSS
To demonstrate that the attributes (like `[class]`, in this example's
case),applied to the elements declared in the
`#validation_message_template` block persist across validations, this
commit styles the form elements with [TailwindCSS][] and its [Form
styles][].

[TailwindCSS]: https://tailwindcss.com/
[Form styles]: https://tailwindcss-custom-forms.netlify.app/ f34526a8618fa15af3196500e731827cda3aa860

--- a/commits/428b91ecd077a89c75c83530fbff1609951565ea/index.html
+++ b/commits/428b91ecd077a89c75c83530fbff1609951565ea/index.html
@@ -22,9 +22,9 @@
         navigation
         
       ">
-<a href="../7801349c937ff9b821d219e8887b8747735f6769/">              &#8592; Previous
+<a href="../43d5d4a88a057aa235222c89d105308104e27846/">              &#8592; Previous
 </a>
-<a href="../479fb8467bf28031295059b2f2f8c6f2af0ac74e/">              Next &#8594;
+<a href="../c13a43863182f938407d161e020a6440ee848a66/">              Next &#8594;
 </a>      </nav>
     </header>
 
@@ -47,26 +47,27 @@
 "></a>
                 <a href="../d97f90d3962aa14f7ff114f8721dcf3a028686da/" class="commit-node commit-node--collapsed" title="[SKIP]: Install TailwindCSS
 "></a>
-                <a href="../ca31f0105d5a8a8e2beafcb7d4502329cb9290cd/" class="commit-node commit-node--collapsed" title="Explain the project in the README.md"></a>
-                <a href="../deb861c26f1411c2be53ceba230718aed86e0819/" class="commit-node commit-node--collapsed" title="Store invalid submission parameters in the Flash
+                <a href="../b9ffdf829b666ef9661aace06c1b4d3b07526d99/" class="commit-node commit-node--collapsed" title="Explain the project in the README.md
 "></a>
-                <a href="../fdd439a3370b7316ab981dca43a56195f22048c1/" class="commit-node commit-node--collapsed" title="Add System tests for Validation Messages A11y
+                <a href="../ffd1a1de5b47bb95f44ee9ea7b5752ea424b31b7/" class="commit-node commit-node--collapsed" title="Store invalid submission parameters in the Flash
 "></a>
-                <a href="../c67756d89ef7399face876f8406b0023c24a7994/" class="commit-node commit-node--collapsed" title="Add Users and require Authentication for messaging
+                <a href="../37a26a851379f20f49e3372e2d1e949e92392708/" class="commit-node commit-node--collapsed" title="Add System tests for Validation Messages A11y
 "></a>
-                <a href="../7801349c937ff9b821d219e8887b8747735f6769/" class="commit-node commit-node--collapsed" title="ActionView::Helpers::FormBuilder extensions
+                <a href="../99e187d6ad5442cdcacb39a4925daaa489e000db/" class="commit-node commit-node--collapsed" title="Add Users and require Authentication for messaging
+"></a>
+                <a href="../43d5d4a88a057aa235222c89d105308104e27846/" class="commit-node commit-node--collapsed" title="ActionView::Helpers::FormBuilder extensions
 "></a>
                 <a href="./" class="commit-node commit-node--collapsed" title="Abstract Validation Message ID generation
 " aria-current="page"></a>
-                <a href="../479fb8467bf28031295059b2f2f8c6f2af0ac74e/" class="commit-node commit-node--collapsed" title="Abstract Validation Message rendering
+                <a href="../c13a43863182f938407d161e020a6440ee848a66/" class="commit-node commit-node--collapsed" title="Abstract Validation Message rendering
 "></a>
-                <a href="../ccb49d2df66af482155ef279cc30681ddcae4202/" class="commit-node commit-node--collapsed" title="Integrate with Browser Constraint Validation API
+                <a href="../04c8f5b94fa3526bf97a26ed2aa3c804c087bb67/" class="commit-node commit-node--collapsed" title="Integrate with Browser Constraint Validation API
 "></a>
-                <a href="../1fdd7baf52cb412549fdea23ed813fa22a978479/" class="commit-node commit-node--collapsed" title="Validation message from server
+                <a href="../5308c69945281d1ca827e35a52e04377dc54fdc6/" class="commit-node commit-node--collapsed" title="Validation message from server
 "></a>
-                <a href="../1996174652a3f8cddf4a1789b9d7e80bca2aae66/" class="commit-node commit-node--collapsed" title="Dynamically disable invalid form submit buttons
+                <a href="../9306e8a2014412dbc13af488e27381fc989353ed/" class="commit-node commit-node--collapsed" title="Dynamically disable invalid form submit buttons
 "></a>
-                <a href="../9a6ac58e7eb5723e243752c9be6cea0a8ced8b0a/" class="commit-node commit-node--collapsed" title="Style with TailwindCSS
+                <a href="../f34526a8618fa15af3196500e731827cda3aa860/" class="commit-node commit-node--collapsed" title="Style with TailwindCSS
 "></a>
             </nav>
 
@@ -114,27 +115,27 @@
 
 </a><a href="../d97f90d3962aa14f7ff114f8721dcf3a028686da/" class="commit-node commit-node--full">              <p>[SKIP]: Install TailwindCSS</p>
 
-</a><a href="../ca31f0105d5a8a8e2beafcb7d4502329cb9290cd/" class="commit-node commit-node--full">              <p>Explain the project in the README.md</p>
+</a><a href="../b9ffdf829b666ef9661aace06c1b4d3b07526d99/" class="commit-node commit-node--full">              <p>Explain the project in the README.md</p>
 
-</a><a href="../deb861c26f1411c2be53ceba230718aed86e0819/" class="commit-node commit-node--full">              <p>Store invalid submission parameters in the Flash</p>
+</a><a href="../ffd1a1de5b47bb95f44ee9ea7b5752ea424b31b7/" class="commit-node commit-node--full">              <p>Store invalid submission parameters in the Flash</p>
 
-</a><a href="../fdd439a3370b7316ab981dca43a56195f22048c1/" class="commit-node commit-node--full">              <p>Add System tests for Validation Messages A11y</p>
+</a><a href="../37a26a851379f20f49e3372e2d1e949e92392708/" class="commit-node commit-node--full">              <p>Add System tests for Validation Messages A11y</p>
 
-</a><a href="../c67756d89ef7399face876f8406b0023c24a7994/" class="commit-node commit-node--full">              <p>Add Users and require Authentication for messaging</p>
+</a><a href="../99e187d6ad5442cdcacb39a4925daaa489e000db/" class="commit-node commit-node--full">              <p>Add Users and require Authentication for messaging</p>
 
-</a><a href="../7801349c937ff9b821d219e8887b8747735f6769/" class="commit-node commit-node--full">              <p>ActionView::Helpers::FormBuilder extensions</p>
+</a><a href="../43d5d4a88a057aa235222c89d105308104e27846/" class="commit-node commit-node--full">              <p>ActionView::Helpers::FormBuilder extensions</p>
 
 </a><a href="./" class="commit-node commit-node--full" aria-current="page">              <p>Abstract Validation Message ID generation</p>
 
-</a><a href="../479fb8467bf28031295059b2f2f8c6f2af0ac74e/" class="commit-node commit-node--full">              <p>Abstract Validation Message rendering</p>
+</a><a href="../c13a43863182f938407d161e020a6440ee848a66/" class="commit-node commit-node--full">              <p>Abstract Validation Message rendering</p>
 
-</a><a href="../ccb49d2df66af482155ef279cc30681ddcae4202/" class="commit-node commit-node--full">              <p>Integrate with Browser Constraint Validation API</p>
+</a><a href="../04c8f5b94fa3526bf97a26ed2aa3c804c087bb67/" class="commit-node commit-node--full">              <p>Integrate with Browser Constraint Validation API</p>
 
-</a><a href="../1fdd7baf52cb412549fdea23ed813fa22a978479/" class="commit-node commit-node--full">              <p>Validation message from server</p>
+</a><a href="../5308c69945281d1ca827e35a52e04377dc54fdc6/" class="commit-node commit-node--full">              <p>Validation message from server</p>
 
-</a><a href="../1996174652a3f8cddf4a1789b9d7e80bca2aae66/" class="commit-node commit-node--full">              <p>Dynamically disable invalid form submit buttons</p>
+</a><a href="../9306e8a2014412dbc13af488e27381fc989353ed/" class="commit-node commit-node--full">              <p>Dynamically disable invalid form submit buttons</p>
 
-</a><a href="../9a6ac58e7eb5723e243752c9be6cea0a8ced8b0a/" class="commit-node commit-node--full">              <p>Style with TailwindCSS</p>
+</a><a href="../f34526a8618fa15af3196500e731827cda3aa860/" class="commit-node commit-node--full">              <p>Style with TailwindCSS</p>
 
 </a>        </nav>
       </details>
