--- a/commits/b9ffdf829b666ef9661aace06c1b4d3b07526d99/index.html
+++ b/commits/b9ffdf829b666ef9661aace06c1b4d3b07526d99/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Explain the project in the README.md</title>
+    <title>Explain the project in the README.md
+</title>
     <link href="../../stylesheets/site.css" rel="stylesheet" />
     <script src="../../javascripts/site.js"></script>
   </head>
@@ -23,7 +24,7 @@
       ">
 <a href="../d97f90d3962aa14f7ff114f8721dcf3a028686da/">              &#8592; Previous
 </a>
-<a href="../deb861c26f1411c2be53ceba230718aed86e0819/">              Next &#8594;
+<a href="../ffd1a1de5b47bb95f44ee9ea7b5752ea424b31b7/">              Next &#8594;
 </a>      </nav>
     </header>
 
@@ -46,26 +47,27 @@
 "></a>
                 <a href="../d97f90d3962aa14f7ff114f8721dcf3a028686da/" class="commit-node commit-node--collapsed" title="[SKIP]: Install TailwindCSS
 "></a>
-                <a href="./" class="commit-node commit-node--collapsed" title="Explain the project in the README.md" aria-current="page"></a>
-                <a href="../deb861c26f1411c2be53ceba230718aed86e0819/" class="commit-node commit-node--collapsed" title="Store invalid submission parameters in the Flash
+                <a href="./" class="commit-node commit-node--collapsed" title="Explain the project in the README.md
+" aria-current="page"></a>
+                <a href="../ffd1a1de5b47bb95f44ee9ea7b5752ea424b31b7/" class="commit-node commit-node--collapsed" title="Store invalid submission parameters in the Flash
 "></a>
-                <a href="../fdd439a3370b7316ab981dca43a56195f22048c1/" class="commit-node commit-node--collapsed" title="Add System tests for Validation Messages A11y
+                <a href="../37a26a851379f20f49e3372e2d1e949e92392708/" class="commit-node commit-node--collapsed" title="Add System tests for Validation Messages A11y
 "></a>
-                <a href="../c67756d89ef7399face876f8406b0023c24a7994/" class="commit-node commit-node--collapsed" title="Add Users and require Authentication for messaging
+                <a href="../99e187d6ad5442cdcacb39a4925daaa489e000db/" class="commit-node commit-node--collapsed" title="Add Users and require Authentication for messaging
 "></a>
-                <a href="../7801349c937ff9b821d219e8887b8747735f6769/" class="commit-node commit-node--collapsed" title="ActionView::Helpers::FormBuilder extensions
+                <a href="../43d5d4a88a057aa235222c89d105308104e27846/" class="commit-node commit-node--collapsed" title="ActionView::Helpers::FormBuilder extensions
 "></a>
-                <a href="../aa42ca0b7aa342307cf82b347346e3aaf8e773d6/" class="commit-node commit-node--collapsed" title="Abstract Validation Message ID generation
+                <a href="../428b91ecd077a89c75c83530fbff1609951565ea/" class="commit-node commit-node--collapsed" title="Abstract Validation Message ID generation
 "></a>
-                <a href="../479fb8467bf28031295059b2f2f8c6f2af0ac74e/" class="commit-node commit-node--collapsed" title="Abstract Validation Message rendering
+                <a href="../c13a43863182f938407d161e020a6440ee848a66/" class="commit-node commit-node--collapsed" title="Abstract Validation Message rendering
 "></a>
-                <a href="../ccb49d2df66af482155ef279cc30681ddcae4202/" class="commit-node commit-node--collapsed" title="Integrate with Browser Constraint Validation API
+                <a href="../04c8f5b94fa3526bf97a26ed2aa3c804c087bb67/" class="commit-node commit-node--collapsed" title="Integrate with Browser Constraint Validation API
 "></a>
-                <a href="../1fdd7baf52cb412549fdea23ed813fa22a978479/" class="commit-node commit-node--collapsed" title="Validation message from server
+                <a href="../5308c69945281d1ca827e35a52e04377dc54fdc6/" class="commit-node commit-node--collapsed" title="Validation message from server
 "></a>
-                <a href="../1996174652a3f8cddf4a1789b9d7e80bca2aae66/" class="commit-node commit-node--collapsed" title="Dynamically disable invalid form submit buttons
+                <a href="../9306e8a2014412dbc13af488e27381fc989353ed/" class="commit-node commit-node--collapsed" title="Dynamically disable invalid form submit buttons
 "></a>
-                <a href="../9a6ac58e7eb5723e243752c9be6cea0a8ced8b0a/" class="commit-node commit-node--collapsed" title="Style with TailwindCSS
+                <a href="../f34526a8618fa15af3196500e731827cda3aa860/" class="commit-node commit-node--collapsed" title="Style with TailwindCSS
 "></a>
             </nav>
 
@@ -115,25 +117,25 @@
 
 </a><a href="./" class="commit-node commit-node--full" aria-current="page">              <p>Explain the project in the README.md</p>
 
-</a><a href="../deb861c26f1411c2be53ceba230718aed86e0819/" class="commit-node commit-node--full">              <p>Store invalid submission parameters in the Flash</p>
+</a><a href="../ffd1a1de5b47bb95f44ee9ea7b5752ea424b31b7/" class="commit-node commit-node--full">              <p>Store invalid submission parameters in the Flash</p>
 
-</a><a href="../fdd439a3370b7316ab981dca43a56195f22048c1/" class="commit-node commit-node--full">              <p>Add System tests for Validation Messages A11y</p>
+</a><a href="../37a26a851379f20f49e3372e2d1e949e92392708/" class="commit-node commit-node--full">              <p>Add System tests for Validation Messages A11y</p>
 
-</a><a href="../c67756d89ef7399face876f8406b0023c24a7994/" class="commit-node commit-node--full">              <p>Add Users and require Authentication for messaging</p>
+</a><a href="../99e187d6ad5442cdcacb39a4925daaa489e000db/" class="commit-node commit-node--full">              <p>Add Users and require Authentication for messaging</p>
 
-</a><a href="../7801349c937ff9b821d219e8887b8747735f6769/" class="commit-node commit-node--full">              <p>ActionView::Helpers::FormBuilder extensions</p>
+</a><a href="../43d5d4a88a057aa235222c89d105308104e27846/" class="commit-node commit-node--full">              <p>ActionView::Helpers::FormBuilder extensions</p>
 
-</a><a href="../aa42ca0b7aa342307cf82b347346e3aaf8e773d6/" class="commit-node commit-node--full">              <p>Abstract Validation Message ID generation</p>
+</a><a href="../428b91ecd077a89c75c83530fbff1609951565ea/" class="commit-node commit-node--full">              <p>Abstract Validation Message ID generation</p>
 
-</a><a href="../479fb8467bf28031295059b2f2f8c6f2af0ac74e/" class="commit-node commit-node--full">              <p>Abstract Validation Message rendering</p>
+</a><a href="../c13a43863182f938407d161e020a6440ee848a66/" class="commit-node commit-node--full">              <p>Abstract Validation Message rendering</p>
 
-</a><a href="../ccb49d2df66af482155ef279cc30681ddcae4202/" class="commit-node commit-node--full">              <p>Integrate with Browser Constraint Validation API</p>
+</a><a href="../04c8f5b94fa3526bf97a26ed2aa3c804c087bb67/" class="commit-node commit-node--full">              <p>Integrate with Browser Constraint Validation API</p>
 
-</a><a href="../1fdd7baf52cb412549fdea23ed813fa22a978479/" class="commit-node commit-node--full">              <p>Validation message from server</p>
+</a><a href="../5308c69945281d1ca827e35a52e04377dc54fdc6/" class="commit-node commit-node--full">              <p>Validation message from server</p>
 
-</a><a href="../1996174652a3f8cddf4a1789b9d7e80bca2aae66/" class="commit-node commit-node--full">              <p>Dynamically disable invalid form submit buttons</p>
+</a><a href="../9306e8a2014412dbc13af488e27381fc989353ed/" class="commit-node commit-node--full">              <p>Dynamically disable invalid form submit buttons</p>
 
-</a><a href="../9a6ac58e7eb5723e243752c9be6cea0a8ced8b0a/" class="commit-node commit-node--full">              <p>Style with TailwindCSS</p>
+</a><a href="../f34526a8618fa15af3196500e731827cda3aa860/" class="commit-node commit-node--full">              <p>Style with TailwindCSS</p>
 
 </a>        </nav>
       </details>
@@ -147,6 +149,74 @@
         <section class="commit commit--message">
 
           <h1 id="explain-the-project-in-the-readme-md">Explain the project in the README.md</h1>
+
+<h2 id="how-to-read-this-repository">How to read this repository</h2>
+
+<p>The <a href="https://github.com/seanpdoyle/constraint-validation-example/commits/main">commits</a> are structured to form a sequential narrative, iteratively and
+incrementally building toward integrated client- and server-side validation
+message rendering.</p>
+
+<p>The commits earlier in the sequence use workable and somewhat naive
+implementations to achieve the desired behavior, and are all covered by tests.</p>
+
+<p>The later commits refine the implementation to a point where some valuable
+abstractions emerge.</p>
+
+<p>While reading the commits, feel free to skip over commits prefaced by
+<code>[GENERATED]</code> or <code>[SKIP]</code>.</p>
+
+<h2 id="goals">Goals</h2>
+
+<p>While most of this code strives to be exemplary user-land integrations with some
+of these new concepts, it&rsquo;s a best-effort attempt. The authentication code might
+not be production-grade security, but it serves its purpose here.</p>
+
+<p>Any concepts that are intended to be extracted to their corresponding frameworks
+are declared in directories separate from the application code. For example,
+when possible, Rails extensions are declared within the <code>lib/rails_ext</code>
+directory, and the <code>app/javascript/initializers/</code> directory on the
+JavaScript-side.</p>
+
+<p>As exceptions to that rule, the <code>app/models/concerns</code> and
+<code>app/controllers/concerns</code> declare extract-able code.</p>
+
+<h2 id="turbo">Turbo</h2>
+
+<p>The first commit contains the only <em>truly</em> Turbo-specific work. It
+addresses the Turbo requirements for form submission redirects through a
+workaround that combines the <code>FlashHash</code> and <code>ActiveRecord::SessionStore</code>.</p>
+
+<p>The rest of the work is Turbo-adjacent.</p>
+
+<h2 id="actionview-and-accessibility">ActionView and Accessibility</h2>
+
+<p>The current ActionView default configurations for <code>&lt;form&gt;</code> element construction
+don&rsquo;t create accessible forms and fields.</p>
+
+<p>Some of this work explores some possible extensions to ActionView that could
+improve Rails&rsquo; baked in accessibility.</p>
+
+<h2 id="actionview-and-the-constraint-validations-api">ActionView and the Constraint Validations API</h2>
+
+<p>In addition to building more accessible forms and fields, the ActionView
+extensions introduce some new concepts and patterns to improve the developer
+experience around rendering ActiveModel validations in server-generated
+HTML.</p>
+
+<p>There are also complementary client-side patterns introduced to integrate with
+the Browser-provided Constraint Validations API (you know, that thing that every
+Rails app on the planet opts-out of by declaring <code>[novalidate]</code> attributes).</p>
+
+<p>The inception of the concepts behind the JavaScript changes occurred with
+RailsUJS-integration in mind, but it seems that Turbo will supplant RailsUJS and
+make it obsolete and deprecated.</p>
+
+<p>There ended up being <strong>zero</strong> lines of Turbo-dependent JavaScript code.</p>
+
+<h2 id="testing-it-out-locally">Testing it out locally</h2>
+
+<p>To test this out on your own, clone the repository and run the <code>bin/setup</code>
+script, then run the test suite by running <code>bin/rails test:all</code>.</p>
 
         </section>
 
